# fine-grained-storage

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RUNNING.md
configs/: default.json
configs/generation/: default.json
configs/writing/: strategy_one.json
docs/: FORMAT.md  RNTUPLE_LAYOUT.md
generation/: CMakeLists.txt
generation/include/fgs/: bin_io.hpp  config.hpp  generator.hpp  types.hpp
generation/src/: bin_io.cpp  config.cpp  generate_main.cpp  generator.cpp
reading/: CMakeLists.txt  event_reader.cpp  event_reader.hpp  main.cpp
writing/: CMakeLists.txt  fgs_verify.cpp
writing/common/: ordering.cpp  ordering.hpp
writing/strategy_one/: main.cpp
